<resources>
    <string name="app_name">Luxurious Creation</string>
    <string name="app_line">Make Your Living Comfortable</string>
    <string name="login">Login</string>
    <string name="letsGo">Let\'s Go</string>
    <string name="editProfile">Edit Profile Detail</string>
    <string name="save">Save</string>
    <string name="email">Email Id</string>
    <string name="password">Password</string>
    <string name="register">New User?</string>
    <string name="forget_password">Forgot Password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="renew_password">Re-enter New Password</string>
    <string name="new_password">New Password</string>
    <string name="reset_link_sent">Send Link</string>
    <string name="reset_msg">Password reset link will be sent on the Email id</string>

    <string name="default_web_client_id">1058953721454-c6kri8ou25abrcnbokj70515qqi6mvec.apps.googleusercontent.com</string>

    <string name="chairs">Chairs</string>
    <string name="chairsCategory">Bed</string>
    <string name="beds">Beds</string>
    <string name="bedsCategory">Bed</string>
    <string name="tables">Tables</string>
    <string name="tablesCategory">Bed</string>
    <string name="dining">Dining Set</string>
    <string name="diningCategory">Bed</string>
    <string name="sofa">Sofa Set</string>
    <string name="sofaCategory">Bed</string>

    <string name="profile_name">Pulkit Verma</string>
    <string name="profile_domain">Aspiring App Developer</string>

<!--    <string name="default_web_client_id">project-1058953721454</string>-->
    <string name="default_ar_url">https://luxurious-creation.web.app/404.html</string>
    <string name="default_description">Sorry! No Description is found for this item.</string>
    <string name="default_name">Model Error</string>
<!--    <string name="default_shop_url">https://luxurious-creation.web.app/404.html</string>-->

    <string name="model1_name">Comfy Chair</string>
    <string name="model2_name">Bed</string>
    <string name="model3_name">Sofa Set with Fancy Table</string>
    <string name="model4_name">Sofa Set</string>
    <string name="model5_name">Family Dining Set with Chairs</string>
    <string name="model6_name">Bed Side Table</string>
    <string name="model7_name">Maharajah Couple Sofa with Coffee Table</string>
    <string name="model8_name">Multi Slide Wardrobe</string>
    <string name="model9_name">Double Size Bed</string>


    <string name="model1_desc">An elegant and sturdy chair, perfect for adding a touch of comfort to any space.</string>
    <string name="model2_desc">Luxurious bed designed for ultimate relaxation and style in your bedroom.</string>
    <string name="model3_desc">A cozy sofa set paired with a stylish table, perfect for modern living rooms.</string>
    <string name="model4_desc">Experience unmatched comfort with this contemporary and spacious sofa set.</string>
    <string name="model5_desc">A stylish and spacious dining set, perfect for family gatherings and meals.</string>
    <string name="model6_desc">Compact and stylish, this bedside table is the perfect companion for your bed.</string>
    <string name="model7_desc">A royal-style sofa set complete with a coffee table, adding grandeur to your living room.</string>
    <string name="model8_desc">A spacious and sleek wardrobe with multiple sliding doors for easy access and storage.</string>
    <string name="model9_desc">A comfortable and modern double-size bed for your master bedroom.</string>

    <string name="model1_arLink">https://luxurious-creation.web.app/ar-pages/model1.html</string>
    <string name="model2_arLink">https://luxurious-creation.web.app/ar-pages/model2.html</string>
    <string name="model3_arLink">https://luxurious-creation.web.app/ar-pages/model3.html</string>
    <string name="model4_arLink">https://luxurious-creation.web.app/ar-pages/model4.html</string>
    <string name="model5_arLink">https://luxurious-creation.web.app/ar-pages/model5.html</string>
    <string name="model6_arLink">https://luxurious-creation.web.app/ar-pages/model6.html</string>
    <string name="model7_arLink">https://luxurious-creation.web.app/ar-pages/model7.html</string>
    <string name="model8_arLink">https://luxurious-creation.web.app/ar-pages/model8.html</string>
    <string name="model9_arLink">https://luxurious-creation.web.app/ar-pages/model9.html</string>

    <string name="itemId1">ItemId1</string>
    <string name="itemId2">ItemId2</string>
    <string name="itemId3">ItemId3</string>
    <string name="itemId4">ItemId4</string>
    <string name="itemId5">ItemId5</string>
    <string name="itemId6">ItemId6</string>
    <string name="itemId7">ItemId7</string>
    <string name="itemId8">ItemId8</string>
    <string name="itemId9">ItemId9</string>








</resources>
